tests/ui/snapshots/ui__test_help__help_panel_current_view_log.snap
---
source: tests/ui/test_help.rs
expression: terminal.backend()
---
"┌─────────────────── Tij - Help [Log View]  (a: all views) ────────────────────┐"
"│Key bindings:                                                                 │"
"│                                                                              │"
"│Log View:                                                                     │"
"│  :         Command palette (search low-frequency commands)                   │"
"│  Enter     Show diff                                                         │"
"│  d         Describe (1-line quick edit; opens editor for multi-line)         │"
"│  Ctrl+e    Describe in external editor (full text)                           │"
"│  e         Edit change                                                       │"
"│  c         Create new change                                                 │"
"│  C         New from selected (Log)                                           │"
"│  /         Search in list                                                    │"
"│  r         Revset filter                                                     │"
"│  n/N       Next/prev search                                                  │"
"│  s         Status view                                                       │"
"│  o         Operation history                                                 │"
"│  u         Undo                                                              │"
"│  Ctrl+r    Redo                                                              │"
"│  S         Squash (select target)                                            │"
"│  A         Abandon change                                                    │"
"│  x         Split change                                                      │"
"│  b c       Create bookmark                                                   │"
"│  b d       Delete bookmark                                                   │"
"│  b t       Track remote bookmarks                                            │"
"│  b j       Jump to bookmark                                                  │"
"│  b a       Advance ancestor bookmark to @                                    │"
"│  b v       View bookmarks                                                    │"
"│  R         Rebase (r/s/b/A/B)                                                │"
"│  B         Absorb changes                                                    │"
"│  X         Resolve conflicts                                                 │"
"│  F         Git fetch                                                         │"
"│  P         Git push                                                          │"
"│  =         Compare revisions                                                 │"
"│  I         Interdiff revisions                                               │"
"│  t         Tag view                                                          │"
"│  w         Workspace view                                                    │"
"│  p         Toggle preview pane                                               │"
"│  ]/[       Move @ to next/prev                                               │"
"│  V         Toggle reversed order                                             │"
"│  Y         Duplicate change                                                  │"
"│  E         Diffedit (external diff editor)                                   │"
"│  L         Evolution log (change history)                                    │"
"│  Z         Revert change (create reverse-diff commit)                        │"
"│  i         Simplify parents (remove redundant parent edges)                  │"
"│  |         Parallelize commits (convert linear chain to siblings)            │"
"│  f         Fix (apply configured code formatters to revision and descendants)│"
"│  O         Arrange (interactively arrange the commit graph, jj 0.40+)        │"
"│  H         Command history                                                   │"
"│  W         Bisect (find bad revision)                                        │"
"│  v         Metaedit (edit author, change-id, timestamp)                      │"
"│                                                                              │"
"│Global:                                                                       │"
"│  q         Quit / Back                                                       │"
"│  ?         Help                                                              │"
"│  Tab       Switch view                                                       │"
"│  Esc       Back to previous                                                  │"
"│  Ctrl+l    Refresh                                                           │"
"│                                                                              │"
"│Navigation:                                                                   │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
