tests/ui/snapshots/ui__test_help__help_panel_full.snap
---
source: tests/ui/test_help.rs
expression: terminal.backend()
---
"┌───────────────── Tij - Help [All Views]  (a: current view) ──────────────────┐"
"│Key bindings:                                                                 │"
"│                                                                              │"
"│Help panel:                                                                   │"
"│  /         Search help                                                       │"
"│  n/N       Next/prev match                                                   │"
"│  a         Toggle all views / current view                                   │"
"│  q/Esc     Close help                                                        │"
"│                                                                              │"
"│Global:                                                                       │"
"│  q         Quit / Back                                                       │"
"│  ?         Help                                                              │"
"│  Tab       Switch view                                                       │"
"│  Esc       Back to previous                                                  │"
"│  Ctrl+l    Refresh                                                           │"
"│                                                                              │"
"│Navigation:                                                                   │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│                                                                              │"
"│Log View:                                                                     │"
"│  :         Command palette (search low-frequency commands)                   │"
"│  Enter     Show diff                                                         │"
"│  d         Describe (1-line quick edit; opens editor for multi-line)         │"
"│  Ctrl+e    Describe in external editor (full text)                           │"
"│  e         Edit change                                                       │"
"│  c         Create new change                                                 │"
"│  C         New from selected (Log)                                           │"
"│  /         Search in list                                                    │"
"│  r         Revset filter                                                     │"
"│  n/N       Next/prev search                                                  │"
"│  s         Status view                                                       │"
"│  o         Operation history                                                 │"
"│  u         Undo                                                              │"
"│  Ctrl+r    Redo                                                              │"
"│  S         Squash (select target)                                            │"
"│  A         Abandon change                                                    │"
"│  x         Split change                                                      │"
"│  b         Bookmark view                                                     │"
"│  R         Rebase (r/s/b/A/B)                                                │"
"│  B         Absorb changes                                                    │"
"│  X         Resolve conflicts                                                 │"
"│  F         Git fetch                                                         │"
"│  P         Git push                                                          │"
"│  t         Tag view                                                          │"
"│  w         Workspace view                                                    │"
"│  p         Toggle preview pane                                               │"
"│  ]/[       Move @ to next/prev                                               │"
"│  V         Toggle reversed order                                             │"
"│  L         Evolution log (change history)                                    │"
"│  H         Command history                                                   │"
"│                                                                              │"
"│Input Mode:                                                                   │"
"│  Enter     Submit input                                                      │"
"│  Esc       Cancel input                                                      │"
"│  Backspace Delete character                                                  │"
"│                                                                              │"
"│Diff View:                                                                    │"
"│  m         Cycle diff display mode (color-words/stat/git)                    │"
"│  t         Toggle full description (expand/collapse header)                  │"
"│  j/k       Scroll down/up                                                    │"
"│  d/u       Half page down/up                                                 │"
"│  g/G       Go to top/bottom                                                  │"
"│  [/]       Prev/next file                                                    │"
"│  a         Show file blame                                                   │"
"│  y         Copy to clipboard (full: jj show)                                 │"
"│  Y         Copy to clipboard (diff only: jj diff)                            │"
"│  w         Export to .patch file                                             │"
"│  q         Back to log                                                       │"
"│                                                                              │"
"│Status View:                                                                  │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│  Enter     Show file diff                                                    │"
"│  a         Show file blame                                                   │"
"│  C         Commit changes                                                    │"
"│  f         Jump to conflict                                                  │"
"│  r         Restore file                                                      │"
"│  R         Restore all files                                                 │"
"│  E         Diffedit (external diff editor)                                   │"
"│  u         Undo                                                              │"
"│  Ctrl+r    Redo                                                              │"
"│  Tab       Switch to log                                                     │"
"│  q         Back to log                                                       │"
"│                                                                              │"
"│Bookmark View:                                                                │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│  Enter     Jump to bookmark in log                                           │"
"│  n         Create bookmark                                                   │"
"│  d         Delete local bookmark                                             │"
"│  t         Track remote bookmark                                             │"
"│  T         Untrack remote bookmark                                           │"
"│  r         Rename bookmark                                                   │"
"│  f         Forget bookmark (remove tracking)                                 │"
"│  m         Move bookmark to @                                                │"
"│  u         Undo                                                              │"
"│  Ctrl+r    Redo                                                              │"
"│  q         Back to log                                                       │"
"│                                                                              │"
"│Tag View:                                                                     │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│  Enter     Jump to tag in log                                                │"
"│  n         Create tag on @                                                   │"
"│  d         Delete tag                                                        │"
"│  t         Track remote tag                                                  │"
"│  T         Untrack remote tag                                                │"
"│  P         Push tag to remote                                                │"
"│  F         Cycle filter (all/tracked/conflicted)                             │"
"│  u         Undo                                                              │"
"│  Ctrl+r    Redo                                                              │"
"│  q         Back to log                                                       │"
"│                                                                              │"
"│Workspace View:                                                               │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│  Enter     Jump to working copy in log                                       │"
"│  n         Add workspace                                                     │"
"│  d         Forget workspace                                                  │"
"│  r         Rename workspace (current only)                                   │"
"│  u         Undo                                                              │"
"│  Ctrl+r    Redo                                                              │"
"│  q         Back to log                                                       │"
"│                                                                              │"
"│Command History View:                                                         │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│  Enter     Toggle detail                                                     │"
"│  f         Filter: All / Write / Read / Failed                               │"
"│  y         Copy command line                                                 │"
"│  q         Back                                                              │"
"│                                                                              │"
"│Operation View:                                                               │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│  Enter     Restore operation                                                 │"
"│  u         Undo                                                              │"
"│  Ctrl+r    Redo                                                              │"
"│  q         Back to log                                                       │"
"│                                                                              │"
"│Blame View:                                                                   │"
"│  j/k       Move down/up                                                      │"
"│  g/G       Go to top/bottom                                                  │"
"│  Enter     Show diff                                                         │"
"│  J         Jump to change in log                                             │"
"│  q         Back                                                              │"
"│                                                                              │"
"│Resolve View:                                                                 │"
"│  j/k       Move down/up                                                      │"
"│  Enter     Resolve (external tool, @ only)                                   │"
"│  o         Resolve with :ours                                                │"
"│  t         Resolve with :theirs                                              │"
"│  d         Show diff                                                         │"
"│  u         Undo                                                              │"
"│  Ctrl+r    Redo                                                              │"
"│  q         Back to log                                                       │"
"│                                                                              │"
"│Evolog View:                                                                  │"
"│  Enter     Show this revision's diff                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
