tests/ui/snapshots/ui__test_help__help_panel_narrow.snap
---
source: tests/ui/test_help.rs
expression: terminal.backend()
---
"┌── Tij - Help [All Views]  (a: current view) ───┐"
"│Key bindings:                                   │"
"│                                                │"
"│Help panel:                                     │"
"│  /         Search help                         │"
"│  n/N       Next/prev match                     │"
"│  a         Toggle all views / current view     │"
"│  q/Esc     Close help                          │"
"│                                                │"
"│Global:                                         │"
"│  q         Quit / Back                         │"
"│  ?         Help                                │"
"│  Tab       Switch view                         │"
"│  Esc       Back to previous                    │"
"│  Ctrl+l    Refresh                             │"
"│                                                │"
"│Navigation:                                     │"
"│  j/k       Move down/up                        │"
"│  g/G       Go to top/bottom                    │"
"│                                                │"
"│Log View:                                       │"
"│  :         Command palette (search low-frequenc│"
"│  Enter     Show diff                           │"
"│  d         Describe (1-line quick edit; opens e│"
"│  Ctrl+e    Describe in external editor (full te│"
"│  e         Edit change                         │"
"│  c         Create new change                   │"
"│  C         New from selected (Log)             │"
"│  /         Search in list                      │"
"└────────────────────────────────────────────────┘"
